[package]
name = "protosocks"
version = "0.7.0"
authors = ["hlzhang <hlzhang@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Socks5 protocol lib in Rust (RFC1928 and RFC1929)"
homepage = "https://github.com/hlzhang/protosocks/"
repository = "https://github.com/hlzhang/protosocks/"
documentation = "https://docs.rs/protosocks"
readme = "README.md"
exclude = [
    ".circleci/*",
    ".gitignore",
    ".travis.yml",
    ".versionrc.js",
    "ver",
]

[dependencies]
bytes = "0.5"
futures = { version = "0.3.0", optional = true }
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
serde = "1.0"
serde_derive = "1.0"
#smolsocket = { version = "0.3", default-features = false }
smolsocket = { path = "../smolsocket", default-features = false }
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", branch = "master", default-features = false }
snafu = "0.4.1"
tokio = { version = "0.2.22", default-features = false, features = ["full"], optional = true }
tokio-util = { version = "0.3.0", features = ["full"], optional = true }
#trust-dns = { version = "*", default-features = false, features = ["dns-over-https-rustls"], optional = true }
trust-dns-client = { version = "*", default-features = false, optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
pretty_env_logger = "0.3"

[features]
dns = ["trust-dns-client"]
rt_tokio = ["futures", "tokio", "tokio-util"]
std = ["smolsocket/std", "smoltcp/std"]
"proto-ipv4" = ["smolsocket/proto-ipv4", "smoltcp/proto-ipv4"]
"proto-ipv6" = ["smolsocket/proto-ipv6", "smoltcp/proto-ipv4"]
default = [
    "dns",
    "rt_tokio",
    "std",
    "proto-ipv4", "proto-ipv6"
]
